feat: add function to update unit of measurement
